# qglviwer-framework

./: CMakeLists.txt  README.md
src/: gui_design.ui  main.cpp  myqglviewer.cpp  myqglviewer.h  ui_gui_design.h
